--- a/.github/workflows/license-tests.yml
+++ b/.github/workflows/license-tests.yml
@@ -29,7 +29,7 @@ jobs:
         id: license_check_report
         uses: pilosus/action-pip-license-checker@v2
         with:
-          requirements: "requirements/requirements.txt"
+          requirements: "requirements-all.txt"
           fail: "Copyleft,Other,Error"
           fails-only: true
           exclude: "^(tqdm).*"
