--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -23,6 +23,7 @@ jobs:
           python -m pip install poetry
       - name: Install dependencies
         run: |
+          apt-get install -y libopenblas-dev
           poetry install --with dev
       - name: Test
         run: |
