drop python 3.13 support
Our ovos-classifiers locks us to a version of numpy that won't run on 3.13

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ keywords = [
 test = ["neon-minerva"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.9,<3.13"
 ovos-bus-client = ">=0.0.8"
 ovos-workshop = ">=0.0.15"
 setuptools = "^75.0.0"
