fix(security): urllib3 update
Fixes several CVEs in the urllib3 library

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ ovos-utils = ">=0.0.27"
 ovos-config = ">=0.0.5"
 ovos-phal-plugin-oauth = ">=0.0.3"
 nested-lookup = ">=0.2,<1.0"
-webcolors = "^24.11.1"
+webcolors = ">=24.11.1"
+urllib3 = ">=2.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
