--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /skill_homeassistant/locale/en-us
-    translation: /skill_homeassistant/locale/%two_letters_code%
+    translation: /skill_homeassistant/locale/%locale%
