--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,7 @@ shell = "black --line-length=119 skill_homeassistant && isort --overwrite-in-pla
 [tool.poetry.scripts]
 "neon-homeassistant-skill" = "skill_homeassistant:HomeAssistantSkill"
 
-[tool.poetry.plugins."ovos.plugin.skill"]
+[tool.poetry.plugins."opm.skill"]
 "skill_homeassistant.oscillatelabsllc" = "skill_homeassistant:HomeAssistantSkill"
 
 [tool.pylint.messages_control]
