--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,9 @@ shell = "black --line-length=119 skill_homeassistant && isort --overwrite-in-pla
 [tool.poetry.plugins."opm.skill"]
 "skill_homeassistant.oscillatelabsllc" = "skill_homeassistant:HomeAssistantSkill"
 
+[tool.poetry.plugins."ovos.plugin.skill"]
+"skill_homeassistant.oscillatelabsllc" = "skill_homeassistant:HomeAssistantSkill"
+
 [tool.pylint.messages_control]
 disable = [
     "W0718", # broad-except
